--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@
 
 
   <!---Video--->
-  <div class="headingVideo">
+  <div class="headingPicture">
     <img class="nokDonutLogo" src="media/nokDonutLogo.png" alt="Nok's Donut logo">
-    <video id="donutVideo" autoplay loop muted>
-      <source src="media/baconvideo.mp4" type="video/mp4">
-    </video>
+    <img id="donutPicture"src="media/donutMaking.jpeg" alt="picture of someone making donut">
   </div>
   <!---Announcements--->
   <div class="announcements">
