--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <!---Video--->
   <div class="headingPicture">
     <img class="nokDonutLogo" src="media/nokDonutLogo.png" alt="Nok's Donut logo">
-    <img id="donutPicture"src="media/donutMaking.jpeg" alt="picture of someone making donut">
+    <img class="donutMaker" src="media/donutMaking.jpeg" alt="Person making donuts">
   </div>
   <!---Announcements--->
   <div class="announcements">
@@ -123,6 +123,6 @@
     <p class="credit">© 2022 by Nok's Donuts <img class="eddieDigital" src="media/eddieDigital.png" alt="EddieDigital logo"></p>
   </div>
 
-</body>
+</body
 
 </html>
