--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
   <!---Video--->
   <div class="headingPicture">
     <img class="nokDonutLogo" src="media/nokDonutLogo.png" alt="Nok's Donut logo">
-    <img class="donutMaker" src="media/donutMaking.jpeg" alt="Person making donuts">
+    <video class ="donutMaker" autoplay loop muted>
+      <source src="media/baconvideoblur.mp4" type="video/mp4">
+    </video>
   </div>
   <!---Announcements--->
   <div class="announcements">
